# regtail

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml
.github/workflows/: rust.yml  security.yml
benches/: tail_bench.rs
src/: filter.rs  lib.rs  main.rs  opt.rs  tail.rs  watcher.rs
tests/: multi_file.rs  single_file.rs
tests/macros/: mod.rs
tests/utils/: mod.rs
