[package]
name = "regtail"
version = "0.1.0"
authors = ["Hiroaki Goto <goto.inct@gmail.com>"]
edition = "2018"

[dependencies]
ansi_term = "0.11"
notify = "4.0"
walkdir = "2"
regex = "1"
lazy_static = "1.4.0"
pathdiff = "0.1.0"
clap = "2.33.3"
lru = "0.6.5"
atty = "0.2"
content_inspector = "0.2"

[dev-dependencies]
rand = "0.8"
rand_xorshift = "0.3.0"
criterion = "0.3"

[target.'cfg(unix)'.dependencies]
nix = "0.20"

[target.'cfg(unix)'.dev-dependencies]
procfs =  { git = "https://github.com/eminence/procfs.git" }

[[bench]]
name = "tail_bench"
harness = false

[profile.release]
opt-level = 3
lto = true